<resources>
    <string name="app_name">比比部落(商家)</string>
    <string name="app_back">在按一次退出客戶端</string>


    <!--login页面-->
    <string name="mobile_phone">请输入您的手机号码</string>
    <string name="verify_code">请输入您的短信验证码</string>
    <string name="get_vetify_code">发送验证码</string>
    <string name="login_b">商户登录</string>
    <string name="login_out">注销</string>


    <!--main页面-->
    <string name="main_vetify">验证</string>
    <string name="main_record">记录</string>
    <string name="main_video">视频</string>
    <string name="main_flight">出战</string>
    <string name="main_account">结算</string>
    <string name="main_tip">点击按钮,扫描原始人的面部或签到二维码进行签到。</string>
    <string name="main_shop_tip">只有信息齐全才能够结算哦</string>

    <!--店铺信息页面-->
    <string name="shop_upload_license">上传营业执照</string>
    <string name="shop_upload_person">上传身份证</string>
    <string name="shop_upload_card">上传银行卡</string>
    <string name="shop_update_address">修改地址</string>
    <string name="shop_quyu_address">区域</string>


    <string name="shop_name">店铺名</string>
    <string name="shop_adress">地址</string>
    <string name="shop_person">法人身份证</string>
    <string name="shop_card">银行公账户</string>
    <string name="shop_zhizhao">营业执照</string>
    <string name="shop_save">保存信息</string>

    <string name="shop_person_name">姓名</string>
    <string name="shop_person_no">证件号码</string>
    <string name="shop_person_tip">上传图片必须清晰完整,带证件照片的那一面</string>
    <string name="shop_comfirm_up">确认上传</string>
    <string name="shop_select_img">选择证件图片</string>

    <string name="shop_bank_name">开户姓名</string>
    <string name="shop_bank_phone">预留手机号码</string>
    <string name="shop_bank_no">银行卡号</string>
    <string name="shop_bank_no_hint">点击输入银行卡号</string>
    <string name="shop_bank_tip">上传图片必须清晰完整,带银行卡号的那一面</string>
    <string name="shop_license_tip">上传图片必须清晰完整</string>

    <!--扫描信息页面-->
    <string name="scan_title">扫描</string>
    <string name="scan_person_info">详细信息</string>
    <string name="scan_success_info">扫描成功</string>
    <string name="comfirm">确认</string>
    <string name="sex">性别</string>
    <string name="club">部落</string>
    <string name="sign_time">签到次数</string>

    <!--视频页面-->
    <string name="my_video">我的视频</string>
    !--出战页面-->
    <string name="flight_name">姓名</string>
    <string name="flight_age">年龄</string>
    <string name="flight_phone">电话</string>
    <string name="flight_sign_time">签到次数</string>

    <string name="account_commit">资料补全，提交审核</string>
    <string name="select_video">选择视频</string>
    <string name="video_name">视频名称</string>
    <string name="video_club">所属部落</string>
    <string name="comfirm_video_del">确认删除</string>
    <string name="save_address">保存地址</string>


    <string-array name="labels2">
        <item>step 1</item>
        <item>step 2</item>
        <item>step 3</item>
        <item>step 4</item>

    </string-array>



    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
