<?xml version="1.0" encoding="utf-8"?>

<com.bbc.bbclub.b.util.AutoCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/view_margin_15"
    android:layout_marginRight="@dimen/view_margin_15"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardUseCompatPadding="true">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/view_margin_15"
        android:orientation="horizontal">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_margin="@dimen/view_margin_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/flight_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/flight_name"
                android:textColor="@color/login_line_no"
                android:textSize="@dimen/text_button_30"
                />
            <TextView
                android:layout_marginTop="@dimen/view_margin_15"
                android:id="@+id/flight_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/flight_age"
                android:textColor="@color/login_line_no"
                android:textSize="@dimen/text_button_30" />
            <TextView
                android:layout_marginTop="@dimen/view_margin_15"
                android:id="@+id/flight_sign_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/flight_sign_time"
                android:textColor="@color/login_line_no"
                android:textSize="@dimen/text_button_30" />
            <TextView
                android:layout_marginTop="@dimen/view_margin_15"
                android:id="@+id/flight_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/flight_phone"
                android:maxLines="1"
                android:textColor="@color/login_line_no"
                android:textSize="@dimen/text_button_30" />
        </com.zhy.autolayout.AutoLinearLayout>
        <ImageView
            android:id="@+id/img"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/view_margin_15"
            android:src="@mipmap/icon_head" />
    </com.zhy.autolayout.AutoRelativeLayout>
</com.bbc.bbclub.b.util.AutoCardView>