<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/login_verify_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary" >

        <RelativeLayout

            android:id="@+id/verify_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:layout_marginTop="5dp"
                    android:id="@+id/verify_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/main_verify_no"/>

                <TextView

                    android:id="@+id/verify_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/main_vetify"
                    android:textColor="@color/main_text" />
            </LinearLayout>
        </RelativeLayout>



        <RelativeLayout

            android:id="@+id/sign_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:layout_marginTop="3dp"
                    android:id="@+id/sign_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/main_sign_no" />

                <TextView
                    android:id="@+id/sign_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/main_record"
                    android:textColor="@color/main_text" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout

            android:id="@+id/video_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:layout_marginTop="2dp"
                    android:id="@+id/video_image"
                    android:layout_width="30dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/main_video_no" />

                <TextView
                    android:id="@+id/video_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/main_video"
                    android:textColor="@color/main_text"  />
            </LinearLayout>
        </RelativeLayout>



        <RelativeLayout

            android:id="@+id/flight_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:layout_marginTop="3dp"
                    android:id="@+id/flight_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/main_fight_no" />

                <TextView
                    android:id="@+id/flight_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/main_flight"
                    android:textColor="@color/main_text" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout

            android:id="@+id/account_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:layout_marginTop="3dp"
                    android:id="@+id/account_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/main_account_no" />

                <TextView
                    android:id="@+id/account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/main_account"
                    android:textColor="@color/main_text" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>